[package]
name = "remote-demo"
version = "0.1.2"
edition = "2021"
authors = ["James Munns <james@onevariable.com>"]
description = "DemoDemo"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.89"
serde_json = "1.0.128"
embedded-io-async       = "0.6"
postcard-schema = { version = "0.2.0", features = ["use-std"] }
serde = "1.0.217"

[dependencies.postcard-rpc]
version = "0.11.3"
features = ["use-std"]

[dependencies.poststation-api-icd]
version = "0.3"

[dependencies.poststation-sdk]
version = "0.3"
path = "/Users/james/onevariable/poststation-util/tools/poststation-sdk"

[dependencies.uartbridge-icd]
path = "../icd"
features = ["use-std"]

[dependencies.r503]
path = "../../"
features = ["std"]


[dependencies.tokio]
version = "1.37.0"
features = [
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "io-util",
]

[dependencies.postcard]
version = "1.1"
features = ["use-std"]
